--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<div class="container">
-  <router-outlet></router-outlet>
+  <app-header></app-header>
+<div class="container-fluid">
+
+  <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+  <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+
+  <app-footer></app-footer>
 </div>
