--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer class="navbar sticky-bottom  bg-dark mt-5">
+    <div class="container-fluid">
+      <p class="text-center text-white mx-auto">© 2021</p>
+    </div>
+  </footer>
