--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,57 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #6D8299;">
+    <div class="container-fluid mx-4">
+        <a class="navbar-brand" href="#">
+            <img src="https://image.flaticon.com/icons/png/512/21/21601.png" alt="" height="38">
+          </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarScroll">
+        <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+          <li class="nav-item">
+            <a
+             class="nav-link active" 
+             aria-current="page" 
+             routerLink="/"
+             *ngIf='!isLogiedIn'
+            >
+                Login
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+             class="nav-link" 
+             routerLink="/sginup"
+             *ngIf='!isLogiedIn'
+            >
+                Sgin Up
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+             class="nav-link" 
+             routerLink="/profile"
+             *ngIf='isLogiedIn'
+            >
+                Profile
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+             class="nav-link" 
+             routerLink="/"
+             (click)=logout()
+             *ngIf='isLogiedIn'
+            >
+                Logout
+            </a>
+          </li>
+
+        </ul>
+        <!-- <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form> -->
+      </div>
+    </div>
+  </nav>
