--- a/src/app/views/profile/profile.component.html
+++ b/src/app/views/profile/profile.component.html
@@ -1,1 +1,15 @@
-<p>profile works!</p>
+<div class="card-columns">
+    <div class="card">
+        <img
+         src="https://img.pikbest.com/58pic/35/39/61/62K58PICb88i68HEwVnm5_PIC2018.gif!w340"
+         class="card-img-top" 
+         alt="..."
+        >
+        <div class="card-body">
+            <h5 class="card-title">title of artical</h5>
+            <p class="card-text">
+                This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+            </p>
+        </div>
+    </div>
+</div>
