update sign and profile

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="navbar sticky-bottom  bg-dark mt-5">
     <div class="container-fluid">
-      <p class="text-center text-white mx-auto">© 2021</p>
+      <p class="text-center text-white mx-auto">© 2021 by Nariman</p>
     </div>
   </footer>
