--- a/src/app/views/profile/profile.component.html
+++ b/src/app/views/profile/profile.component.html
@@ -1,15 +1,22 @@
-<div class="card-columns">
-    <div class="card">
-        <img
-         src="https://img.pikbest.com/58pic/35/39/61/62K58PICb88i68HEwVnm5_PIC2018.gif!w340"
-         class="card-img-top" 
-         alt="..."
-        >
-        <div class="card-body">
-            <h5 class="card-title">title of artical</h5>
-            <p class="card-text">
-                This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-            </p>
+<div class="contanier mt-5">
+    <p class="h1 text-dark">Welcom {{journalist.name}}</p>
+    <p class="display-6 text-secondary">here Your Article</p>
+
+</div>
+<div class="row row-cols-1 row-cols-md-3 g-4 my-4">
+    <div class="col">
+        <div class="card"  style="border-radius: 25px;">
+            <img
+             src="https://img.pikbest.com/58pic/35/39/61/62K58PICb88i68HEwVnm5_PIC2018.gif!w340"
+             class="card-img-top" 
+             alt="..."
+            >
+            <div class="card-body">
+                <h5 class="card-title">title of artical</h5>
+                <p class="card-text">
+                    This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+                </p>
+            </div>
         </div>
     </div>
 </div>
