--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,86 +1,90 @@
-<div class="container my-5">
-    <div class="row d-flex justify-content-center align-items-center">
-        <div class="col-lg-12 col-xl-11">
-            <div class="card text-black" style="border-radius: 25px;">
-                <div class="card-body p-md-5">
-                    <div class="row justify-content-center">
-                        <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+<section class="vh-100">
+    <div class="container my-5">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-lg-12 col-xl-11">
+                <div class="card text-black" style="border-radius: 25px;">
+                    <div class="card-body p-md-5">
+                        <div class="row justify-content-center">
+                            <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                            <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Login</p>
+                                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign in</p>
 
-                            <form
-                             class="mx-1 mx-md-4"
-                             #contactForm='ngForm' 
-                             (ngSubmit)='signIn(contactForm.value)' 
-                            >
-
-                                <div class="d-flex flex-row align-items-center mb-4">
-                                    <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                                    <div class="form-outline flex-fill mb-0">
-                                        <label class="form-label" for="email">Your Email</label>
-                                        <input
-                                         type="email" 
-                                         id="email" 
-                                         class="form-control"
-                                         required
-                                         name="email" 
-                                         ngModel
-                                         #email='ngModel'
-
-                                        />
-                                        <div class="errors d-flex justify-content-center" *ngIf="email.touched && email.invalid">
-                                            <div *ngIf="email.errors?.['required']">
-                                                * email required
-                                            </div>
-                                            <div *ngIf="email.errors?.['email']">
-                                                * email must valid be email
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="d-flex flex-row align-items-center mb-4">
-                                    <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                                    <div class="form-outline flex-fill mb-0">
-                                        <label class="form-label" for="password">Password</label>
-                                        <input
-                                         type="password" 
-                                         id="password" 
-                                         class="form-control" 
-                                         required
-                                         name="password"
-                                         ngModel
-                                         #password='ngModel'
-                                        />
-                                        <div class="errors d-flex justify-content-center" *ngIf="password.touched && password.invalid">
-                                            <div *ngIf="password.errors?.['required']">
-                                                * Password is required
+                                <form
+                                 class="mx-1 mx-md-4"
+                                 #contactForm='ngForm' 
+                                 (ngSubmit)='signIn(contactForm.value)' 
+                                >
+                                    <div class="d-flex flex-row align-items-center mb-4">
+                                        <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                                        <div class="form-outline flex-fill mb-0">
+                                            <label class="form-label" for="email">Your Email</label>
+                                            <input
+                                             type="email" 
+                                             id="email"
+                                             class="form-control" 
+                                             required
+                                             name="email"
+                                             ngModel
+                                             #email='ngModel'
+                                            />
+                                            <div class="errors d-flex justify-content-center" *ngIf="email.touched && email.invalid">
+                                                <div *ngIf="email.errors?.['required']">
+                                                    * email required
+                                                </div>
+                                                <div *ngIf="email.errors?.['email']">
+                                                    * email must valid be email
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
 
-                                <div class="errors d-flex justify-content-center my-3" *ngIf="invalidLogin">
-                                    * Password or email is invalid
-                                </div>
+                                    <div class="d-flex flex-row align-items-center mb-4">
+                                        <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                                        <div class="form-outline flex-fill mb-0">
+                                            <label class="form-label" for="password">Password</label>
+                                            <input
+                                             type="password" 
+                                             id="password" 
+                                             class="form-control" 
+                                             required
+                                             name="password"
+                                             ngModel
+                                             #password='ngModel'
+                                            />
+                                            <div class="errors d-flex justify-content-center" *ngIf="password.touched && password.invalid">
+                                                <div *ngIf="password.errors?.['required']">
+                                                    * Password is required
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    
+                                    <div class="errors d-flex justify-content-center my-3" *ngIf="invalidLogin">
+                                        * Password or email is invalid
+                                    </div>
+                                    
+                                    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                                        <button
+                                         type="submit" 
+                                         class="btn btn-primary btn-lg"
+                                         [disabled]='contactForm.invalid'
+                                        >
+                                            Login
+                                        </button>
+                                    </div>
 
-                                <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                                    <button
-                                     type="submit" 
-                                     class="btn btn-primary btn-lg"
-                                     [disabled]='contactForm.invalid'
-                                    >
-                                        Login
-                                    </button>
-                                </div>
-                            </form>
+                                </form>
 
+                            </div>
+                            <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+                                <img src="https://mdbootstrap.com/img/Photos/new-templates/bootstrap-registration/draw1.png"
+                                    class="img-fluid img-center" alt="Sample image">
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-
-<div class="mb-5 py-3"></div>
+</section>
+<div class="my-2 py-3"></div>
