--- a/src/app/views/sginup/sginup.component.html
+++ b/src/app/views/sginup/sginup.component.html
@@ -1,65 +1,167 @@
-<section class="vh-100" style="background-color: #eee;">
-    <div class="container h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-lg-12 col-xl-11">
-          <div class="card text-black" style="border-radius: 25px;">
-            <div class="card-body p-md-5">
-              <div class="row justify-content-center">
-                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-  
-                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
-  
-                  <form class="mx-1 mx-md-4">
-  
-                    <div class="d-flex flex-row align-items-center mb-4">
-                      <i class="fas fa-user fa-lg me-3 fa-fw"></i>
-                      <div class="form-outline flex-fill mb-0">
-                        <input type="text" id="form3Example1c" class="form-control" />
-                        <label class="form-label" for="form3Example1c">Your Name</label>
-                      </div>
-                    </div>
-  
-                    <div class="d-flex flex-row align-items-center mb-4">
-                      <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                      <div class="form-outline flex-fill mb-0">
-                        <input type="email" id="form3Example3c" class="form-control" />
-                        <label class="form-label" for="form3Example3c">Your Email</label>
-                      </div>
-                    </div>
-  
-                    <div class="d-flex flex-row align-items-center mb-4">
-                      <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                      <div class="form-outline flex-fill mb-0">
-                        <input type="password" id="form3Example4c" class="form-control" />
-                        <label class="form-label" for="form3Example4c">Password</label>
-                      </div>
-                    </div>
-  
-                    <div class="d-flex flex-row align-items-center mb-4">
-                      <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-                      <div class="form-outline flex-fill mb-0">
-                        <input type="password" id="form3Example4cd" class="form-control" />
-                        <label class="form-label" for="form3Example4cd">Repeat your password</label>
-                      </div>
-                    </div>
-  
-  
-                    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                      <button type="submit" class="btn btn-primary btn-lg">Register</button>
-                    </div>
+<section class="vh-100">
+    <div class="container my-5">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-lg-12 col-xl-11">
+                <div class="card text-black" style="border-radius: 25px;">
+                    <div class="card-body p-md-5">
+                        <div class="row justify-content-center">
+                            <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                    <p class="text-center text-muted mt-5 mb-0">Have already an account? <a routerLink="/" class="fw-bold text-body"><u>Login here</u></a></p>
+                                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
 
-                  </form>
-  
+                                <form
+                                 class="mx-1 mx-md-4"
+                                 #contactForm='ngForm' 
+                                 (ngSubmit)='signUP(contactForm.value)' 
+                                >
+
+                                    <div class="d-flex flex-row align-items-center mb-4">
+                                        <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                                        <div class="form-outline flex-fill mb-0">
+                                            <label class="form-label" for="name">Your Name</label>
+                                            <input
+                                             type="text" 
+                                             id="name" 
+                                             class="form-control" 
+                                             required
+                                             name="name"
+                                             ngModel
+                                             #name='ngModel'
+                                             minlength="3"
+                                            />
+                                            <div class="errors d-flex justify-content-center" *ngIf="name.touched && name.invalid">
+                                                <div *ngIf="name.errors?.['required']">
+                                                    * name is required
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="d-flex flex-row align-items-center mb-4">
+                                        <i class="fas fa-pager fa-lg me-3 fa-fw"></i>
+                                        <div class="form-outline flex-fill mb-0">
+                                            <label class="form-label" for="age">Your Age</label>
+                                            <input
+                                             type="text" 
+                                             id="age" 
+                                             class="form-control"                                          
+                                             required
+                                             name="age"
+                                             ngModel
+                                             #age='ngModel'
+                                             (focus)='changeAge()'
+                                            />
+                                            <div class="errors d-flex justify-content-center" *ngIf="age.touched && age.invalid">
+                                                <div *ngIf="age.errors?.['required']">
+                                                    * age is required
+                                                </div>
+                                            </div>
+                                            <div *ngIf="invalidAge && !age.errors?.['required'] " class="errors d-flex justify-content-center" >
+                                                ** age must real number
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="d-flex flex-row align-items-center mb-4">
+                                        <i class="fas fa-mobile-alt fa-lg me-3 fa-fw"></i>
+                                        <div class="form-outline flex-fill mb-0">
+                                            <label class="form-label" for="mobile">Your Mobile</label>
+                                            <input
+                                             type="text" 
+                                             id="mobile" 
+                                             class="form-control" 
+                                             required
+                                             name="mobile"
+                                             ngModel
+                                             #mobile='ngModel'
+
+                                            />
+                                            <div class="errors d-flex justify-content-center" *ngIf="mobile.touched && mobile.invalid">
+                                                <div *ngIf="mobile.errors?.['required']">
+                                                    * Mobile is required
+                                                </div>
+                                            </div>
+                                            <div *ngIf="invalidMobile && !mobile.errors?.['required'] " class="errors d-flex justify-content-center" >
+                                                ** Mobile must be valid in egypt
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="d-flex flex-row align-items-center mb-4">
+                                        <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                                        <div class="form-outline flex-fill mb-0">
+                                            <label class="form-label" for="email">Your Email</label>
+                                            <input
+                                             type="email" 
+                                             id="email"
+                                             class="form-control" 
+                                             required
+                                             name="email"
+                                             ngModel
+                                             #email='ngModel'
+                                             (focus)='changeEmail()'
+                                            />
+                                            <div class="errors d-flex justify-content-center" *ngIf="email.touched && email.invalid">
+                                                <div *ngIf="email.errors?.['required']">
+                                                    * email required
+                                                </div>
+                                                <div *ngIf="email.errors?.['email']">
+                                                    * email must valid
+                                                </div>
+                                            </div>
+                                            <div *ngIf="invalidEmail && !email.errors?.['required'] && !email.errors?.['email']"  class="errors d-flex justify-content-center">
+                                                **email already use by anther user
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="d-flex flex-row align-items-center mb-4">
+                                        <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                                        <div class="form-outline flex-fill mb-0">
+                                            <label class="form-label" for="password">Password</label>
+                                            <input
+                                             type="password" 
+                                             id="password" 
+                                             class="form-control" 
+                                             required
+                                             name="password"
+                                             ngModel
+                                             #password='ngModel'
+                                             minlength="6"
+                                            />
+                                            <div class="errors d-flex justify-content-center" *ngIf="password.touched && password.invalid">
+                                                <div *ngIf="password.errors?.['required']">
+                                                    * Password is required
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    
+                                    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                                        <button
+                                         type="submit" 
+                                         class="btn btn-primary btn-lg"
+                                         [disabled]='contactForm.invalid'
+                                        >
+                                            Register
+                                        </button>
+                                    </div>
+
+                                    <p class="text-center text-muted mt-5 mb-0">Have already an account? <a
+                                            routerLink="/" class="fw-bold text-body"><u>Login here</u></a></p>
+
+                                </form>
+
+                            </div>
+                            <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+                                <img src="https://mdbootstrap.com/img/Photos/new-templates/bootstrap-registration/draw1.png"
+                                    class="img-fluid img-center" alt="Sample image">
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
-                  <img src="https://colorlib.com/etc/regform/colorlib-regform-7/images/signin-image.jpg" class="img-fluid" alt="Sample image">
-                </div>
-              </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-  </section>
+</section>
+<div class="my-2 py-3"></div>
