--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -15,7 +15,7 @@
                                  (ngSubmit)='signIn(contactForm.value)' 
                                 >
                                     <div class="d-flex flex-row align-items-center mb-4">
-                                        <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                                        <i class="fa fa-envelope fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
                                             <label class="form-label" for="email">Your Email</label>
                                             <input
@@ -39,7 +39,7 @@
                                     </div>
 
                                     <div class="d-flex flex-row align-items-center mb-4">
-                                        <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                                        <i class="fa fa-lock fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
                                             <label class="form-label" for="password">Password</label>
                                             <input
