--- a/src/app/views/sginup/sginup.component.html
+++ b/src/app/views/sginup/sginup.component.html
@@ -16,7 +16,7 @@
                                 >
 
                                     <div class="d-flex flex-row align-items-center mb-4">
-                                        <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                                        <i class="fa fa-user fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
                                             <label class="form-label" for="name">Your Name</label>
                                             <input
@@ -38,11 +38,11 @@
                                     </div>
 
                                     <div class="d-flex flex-row align-items-center mb-4">
-                                        <i class="fas fa-pager fa-lg me-3 fa-fw"></i>
+                                        <i class="fa fa-pager fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
                                             <label class="form-label" for="age">Your Age</label>
                                             <input
-                                             type="text" 
+                                             type="number" 
                                              id="age" 
                                              class="form-control"                                          
                                              required
@@ -63,7 +63,7 @@
                                     </div>
 
                                     <div class="d-flex flex-row align-items-center mb-4">
-                                        <i class="fas fa-mobile-alt fa-lg me-3 fa-fw"></i>
+                                        <i class="fa fa-mobile-alt fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
                                             <label class="form-label" for="mobile">Your Mobile</label>
                                             <input
@@ -88,7 +88,7 @@
                                     </div>
 
                                     <div class="d-flex flex-row align-items-center mb-4">
-                                        <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                                        <i class="fa fa-envelope fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
                                             <label class="form-label" for="email">Your Email</label>
                                             <input
@@ -116,7 +116,7 @@
                                     </div>
 
                                     <div class="d-flex flex-row align-items-center mb-4">
-                                        <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                                        <i class="fa fa-lock fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
                                             <label class="form-label" for="password">Password</label>
                                             <input
@@ -164,4 +164,4 @@
         </div>
     </div>
 </section>
-<div class="my-2 py-3"></div>
+<div class="my-5 py-5"></div>
